# nvdr

./: CLAUDE.md  Cargo.toml  README.md  client_spec.md  scripting.md
addon/: README.md  manifest.ini
addon/globalPlugins/nvdrBridge/: __init__.py
android/: .gitignore  AGENTS.md  README.md  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/oriolgomez/nvdr/: AppContainer.kt  MainActivity.kt  NvdrApp.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
android/gradle/: libs.versions.toml
docs/: NVDA_ADDON_STRUCTURE.md
ios/: .gitignore  AGENTS.md  project.yml
ios/Nvdr/: BridgeClient.swift  Info.plist  KeyboardCapture.swift  NvdrApp.swift  RootView.swift  Settings.swift  SettingsView.swift  SpeechOutput.swift  VK.swift
ios/Nvdr.xcodeproj/: project.pbxproj
mac/: AGENTS.md  project.yml
mac/Nvdr/: BridgeClient.swift  IPC.swift  Info.plist  KeyCapture.swift  NvdrApp.swift  Permissions.swift  RSAOpenSSH.swift  RSASHA2.swift  RSASHA2AuthDelegate.swift  RootView.swift  Settings.swift  SettingsView.swift  SpeechOutput.swift  VK.swift
mac/Nvdr.xcodeproj/: project.pbxproj
mac/Nvdr.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
mac/fastlane/: Appfile  Fastfile  README.md
src/: ipc.rs  keymap.rs  leader.rs  main.rs  output.rs  protocol.rs  script.rs  transport.rs  vk.rs
(+14 files in other folders)
